@@ -20,6 +20,7 @@
 calculations."""
 
 import sys
+import signal
 import traceback
 
 from openquake.baselib.performance import Monitor
@@ -66,6 +67,27 @@ if USE_CELERY:
         for tid in task_ids:
             celery.task.control.revoke(tid, terminate=terminate)
             logs.LOG.debug('Revoked task %s', tid)
+
+
+class MasterKilled(KeyboardInterrupt):
+    "Exception raised when a job is killed manually"
+
+
+def raiseMasterKilled(signum, _stack):
+    """
+    When a SIGTERM is received, raise the MasterKilled
+    exception with an appropriate error message.
+
+    :param int signum: the number of the received signal
+    :param _stack: the current frame object, ignored
+    """
+    if signum == signal.SIGTERM:
+        msg = 'The openquake master process was killed manually'
+    else:
+        msg = 'Received a signal %d' % signum
+    raise MasterKilled(msg)
+
+signal.signal(signal.SIGTERM, raiseMasterKilled)
 
 
 # used by bin/openquake and openquake.server.views
